turtleart.lessons.turtleart.Main.CircleTwo.scala.error
Source:10: error: type mismatch;
 found   : Double(1.5)
 required: Int
		polygone(1.5,180)
                         ^